--- a/table.html
+++ b/table.html
@@ -2,37 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <table>
+    <table border="1">
         <tr>
-            <td>sr.no</td>
-            <td>Name</td>
-            <td>Login</td>
+            <th>S.NO</th>
+            <th>ROLL NUMBER</th>
+            <th>NAME</th>
+            <th>CONTACT</th>
+            <th>COURSE</th>
         </tr>
         <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
+            <td>07</td>
+            <td>1234</td>
+            <td>SHWETA</td>
+            <td>9559416764</td>
+            <td>WEB DEWLOPMENT</td>
         </tr>
         <tr>
-            <td>4</td>   <!--tfoot is use for summerization-->
-            <td>5</td>
-            <td>6</td>
+            <td>08</td>
+            <td>1235</td>
+            <td>ANKITA</td>
+            <td>9026600830</td> <!--row span for combining row-->
+            <td>BTECH</td>
         </tr>
+        <tr>
+            <td>09</td>
+            <td>1236</td>
+            <td>SHREYA</td>
+            <td>9045329647</td>
+            <td rowspan ="10">ECELL</td>
+            
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>1237</td>
+            <td>RIDAM</td>
+            <td>234789567</td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>1238</td>
+            <td>archana</td>
+            <td>842104674</td>
+            <td>BIO</td>
+        </tr>
+        
     </table>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapers.com%2Fparmish-verma&psig=AOvVaw3PqokvCE2cLO5CHei4Xklg&ust=1725013999894000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLDu7IeAmogDFQAAAAAdAAAAABAE" alt="parmish verma">
-    <p>Lorem <b>ipsum</b> dolor sit amet consectetur adipisicing elit. Illum, ab animi aut unde <s>empedetic</s> placeat? Quasi eaque cumque nobis placeat optio amet magni, et repellendus voluptates dolores. Mollitia dignissimos tempora atque nisi ratione. Culpa voluptate atque, cupiditate impedit, consequatur distinctio quidem sint beatae placeat quod corrupti labore consequuntur deserunt. Ullam culpa quia omnis odio ducimus eum modi, magnam ex fuga distinctio recusandae facere, numquam dolorum quidem iste qui ab reiciendis corrupti voluptates? Asperiores accusantium possimus nulla a? Ipsam quo eligendi, voluptatem possimus ipsum error voluptate magni, eius id sint dolorem laudantium amet modi dolor, ullam inventore vero debitis aspernatur ut!</p>
-    <p>
-        2<sup>5</sup>
-    </p>
-    <p>o<sub>2</sub></p>
-    <pre>
-        i shweta yadav,
-        live in azamgarh
-    </pre>
 </body>
 </html>
- 
