--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>css level 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>abes Engineering college,Ghaziabad &reg;&copy;</h1>
-    <h2>fees;&#8377 1,44000/-&trade;</h2>
+    <h1>Hello form new platform</h1>
+    <h1>Hello from new platform</h1>
+    <p>This is a simple paragraph.</p>
+    <button>Click here!</button>
 </body>
 </html>
-
