--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css level 1</title>
+    <title>css level 2</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Hello form new platform</h1>
-    <h1>Hello from new platform</h1>
-    <p>This is a simple paragraph.</p>
-    <button>Click here!</button>
+    <header></header>
+    <div id="navbar">
+        <a id="logo">amazon.in</a>
+        <a href="#">Account</a>
+        <a href="#">My cart</a>
+        <a href="#">contact Us</a>
+            <input placeholder="search Amazon.in">
+            <button>search</button>
+    </div>
+</header>
+<div id="contact">
+    <div class="contentBox" style="background-color: rgba(255, 0,0,0.5);">Buy your favorite soap</div>
+    <div class="contentBox"style="background-color: rgba(0, 255,0,0.5);">Buy your favorite gadget</div>
+    <div class="contentBox"style="background-color: rgba(0, 0,255,0.5);">Rent your favorite movies</div>
+</div>
+<footer>
+    Made with &hearts; by Amazon <br>
+    &#169; 1996-2023,Amazon.com,Inc.or its affiliates</footer>
 </body>
-</html>
+</html> 
